test/functions/vass/return-of-tuple-expansion-1.good
return-of-tuple-expansion-1.chpl:4: error: cannot return multiple values
