test/functions/vass/return-of-tuple-expansion-1.chpl

proc t() {
  const r = (1,2);
  return (...r);
}
writeln(t());
